# stepic-challenge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/app/: celery.py  settings.py  urls.py
app/core/: helpers.py
app/processing/: services.py  tasks.py
app/templates/: index.html
app/video/: admin.py  forms.py  models.py  tasks.py  validators.py  views.py
app/video/migrations/: 0001_initial.py  0002_alter_video_preview_img.py
app/video/services/: download.py  logic.py  selectors.py
deploy/: docker-entrypoint.sh  nginx.conf  requirements.txt  uwsgi.conf
